laravel/public/css/master.css
/********************************************

CSS RESET AND NORMALIZE

*********************************************/
*
{
    margin: 0;
    padding: 0;
}

html, body
{
    height: 100%;
}

/* colors */
body
{
    background-color: #ffffff;
}

p, h1, h2, h3, h4, h5, h6, a, span, td, label
{
    color: black;
    font-family: 'Roboto', sans-serif;
}

header h1, header a, footer p
{
    color: white;
}

/* links-decoration */
a
{
    text-decoration: none;
}

h1
{
    font-size: 2em;
    font-weight: 300;
}

#wrapper
{
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -1.5em;
}

/********************************************

HEADER

*********************************************/

header
{
    width: 100%;
    background-color: #4a708b;
}

#header-content
{
    width: 800px;
    margin: 0 auto;
    /* background: yellow; */
    height: 50px;
}

/* title */
#header-content h1
{
    padding: 5px;
    float: left;
}

/* navigation links */
#navigation
{
    float: right;
    position: relative;    
    list-style-type: none;
    padding: 0;
    margin: 0;
}

#navigation li
{
    float: left;
}

#navigation li a
{
    /* link fit li */
    display: block;
    padding: 14px;
}


#navigation ul
{
    display: none;
    position: absolute;
    list-style: none;
    width: 150px;
    padding-left: 10px;
    padding-bottom: 3px;

    background: #3e5770;
    
    /* It has to be hear in case drop-down menu apears over content */
    z-index: 9;    
}

#navigation ul li
{
    display: block;
    width: 100%;
}

#navigation li:hover > ul
{
    display: block;
}

#navigation li:hover
{
    background: #3e5770;
}
#navigation ul a:hover
{
    color: #9fbbd2;
}

#master-message
{
    clear: both;
    width: 100%;
    text-align: center;
    background: #e74c3c;
}

#master-message p
{
    text-align: center;
    width: 100%;
}

#master-message a
{
    float: right;
    margin-right: 1em;
}

/********************************************

CONTENT

*********************************************/

#content
{
    /* Width is set below in @media */
    margin-left: auto;
    margin-right: auto;
    color: black;
}

/********************************************

FOOTER

*********************************************/

footer, #push-div
{
    height: 1.5em;
    clear: both;
}

footer
{
    width: 100%;
    background-color: #4a708b;
}

#footer-content
{
    /* background: violet; */
    width: 750px;
    margin: 0 auto;
    text-align: center;
    height: 1.5em;
}

#footer-content p
{
    display: block;
}

/********************************************

OTHER

*********************************************/

@media screen and (max-width: 1920px) and (max-height: 1080px){
    #content
    {
        width: 980px;
    }
    #header-content
    {
        width: 980px
    }
}

@media screen and (max-width: 1366px) and (max-height: 768px){
    #content
    {
        width: 780px;
    }
    #header-content
    {
        width: 780px
    }
}

